# BrowserGym-tutorial

./: pyproject.toml
demo_agent/: human.py  run_demo.py
